Add JavaFX to module path.